operators/manifests/redis-operator/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: redis-operator
  labels:
    app.kubernetes.io/name: redis-operator
