operators/manifests/redis-operator/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-operator-metrics
  namespace: redis-operator
  labels:
    app.kubernetes.io/name: redis-operator
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: redis-operator
  ports:
    - name: metrics
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: health
      port: 8081
      targetPort: 8081
      protocol: TCP
